removed local texts (Flüchtlingshilfe Erding) from layout and dashboard

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,16 +1,6 @@
-<div><center><a href="http://fluechtlingshilfe-erding.org" target="_blank"><img src="logo.gif" alt="fluechtlingshilfe-erding.org" title="Zur Homepage des Flüchtlingshilfe Erding e.V." style="padding:10px"></a></center><br></div>
-<center><div class="row forecast" style="text-align:center!important">
-    <div class="upcoming-shifts">
-        
-    </div>
-    <div class="upcoming-shifts">
-        %number_upcoming_shifts%
-    </div>
-    <div class="currently-working">
-        %number_currently_working%
-    </div>
-</center>
-</div>
+<div><center><a href="LOGOURL" target="_blank"><img src="LOGO" alt="LOGOALT" title="LOGOTITLE" style="padding:10px"></a></center><br></div>
+<div><center><a class="btn btn-lg btn-success" href="?p=register">
+<i class="fa fa-hand-peace-o fa-2x pull-left"></i> Jetzt registrieren<br>und helfen!</a> <a class="btn btn-lg btn-danger" href="?p=login"><i class="fa fa-sign-in fa-2x pull-left"></i> Schon angemeldet?<br>Hier einloggen!</a></center><br><br></div>
 <div class="row blocks">
     <section class="job-list">
         %my_next_jobs%
