--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>%title% - Flüchtlingshilfe Erding - Helfersystem</title>
+<title>%title% - TITLE - Helfersystem</title>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="css/theme%theme%.css" />
@@ -11,7 +11,7 @@
 <script type="text/javascript" src="vendor/jquery/dist/jquery.min.js"></script>
 <script type="text/javascript" src="vendor/jquery-ui.min.js"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
-
+<link href="favicon.ico" rel="shortcut icon" />
 <script type="text/javascript">
 	$(document).ready(function(){
 		$('ul.menu li').click(function() {
@@ -47,7 +47,7 @@
         <div class="text-center footer" style="margin-bottom: 10px;">
           <a href="?p=faq2"><i class="fa fa-question-circle"></i> FAQ (Hilfe)</a> · <a href="?p=imprint"><i class="fa fa-info-circle"></i> Impressum</a> · <a href="?p=privacy"><i class="fa fa-shield"></i> Datenschutz
            </a>
-		   <br><small>Further developed by <a href="http://welcomehelp.de" target="_blank">Welcome Help</a>, <a href="https://www.facebook.com/groups/nerds4refugees/" target="_blank">Nerds4Refugees</a> & <a href="http://fluechtlingshilfe-erding.org/" target="_blank">Flüchtlingshilfe Erding e.V.</a></small>
+		   <br><small>Further developed by <a href="http://welcomehelp.de" target="_blank">Welcome Help</a>, <a href="https://www.facebook.com/groups/nerds4refugees/" target="_blank">Nerds4Refugees</a> & <a href="LINK" target="_blank">LINKTITLE</a></small>
         </div>
       </div>
     </div>
