--- a/public/css/theme1.css
+++ b/public/css/theme1.css
@@ -7201,3 +7201,24 @@ a.thumbnail.active {
 .jumbotron h6 {
   color: #fff;
 }
+ /* Cookie Notice */
+
+        div.pn_notebox{
+            padding: 8px;
+            text-align: center;
+            background-color: #FCFFDE;
+            border: 1px solid #FFC457;
+        }
+        a.pn_approval{
+            background-color: #FFC457;
+            color: #fff;
+            padding: 2px 8px;
+        }
+        div.pn_approved{
+            background-color: #C9FFE6;
+            border-color: #00DE76;
+        }
+        div.pn_removed{
+            background-color: #FAE3EC;
+            border-color: #E00958;
+}
