local customizations for Munich

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,4 +1,4 @@
-<div><center><a href="LOGOURL" target="_blank"><img src="LOGO" alt="LOGOALT" title="LOGOTITLE" style="padding:10px"></a></center><br></div>
+<div><center><a href="http://fluechtlingshilfemuenchen.de" target="_blank"><img src="logo.jpg" alt="Flüchtlingen helfen in München" title="Flüchtlingen helfen in München" style="padding:10px"></a></center><br></div>
 <div><center><a class="btn btn-lg btn-success" href="?p=register">
 <i class="fa fa-hand-peace-o fa-2x pull-left"></i> Jetzt registrieren<br>und helfen!</a> <a class="btn btn-lg btn-danger" href="?p=login"><i class="fa fa-sign-in fa-2x pull-left"></i> Schon angemeldet?<br>Hier einloggen!</a></center><br><br></div>
 <div class="row blocks">
