--- a/templates/guest_credits.html
+++ b/templates/guest_credits.html
@@ -4,7 +4,7 @@
 Modified by #Nerds4Refugees & #WelcomeHelp!</p>
 
 <h2>Hosting</h2>
-<p>Webspace, development platform and domain is currently provided by Suny. Thanks! We're all helping together to get this working!</p>
+<p>Webspace, development platform and domain is currently provided by all-connect.net. Thanks! We're all helping together to get this working!</p>
 
 <h2>Translation</h2>
 <p>Many thanks for the german translation: <a href="http://e7p.de">e7p</a>. Edited by Andreas.</p>
