--- a/templates/guest_privacy.html
+++ b/templates/guest_privacy.html
@@ -2,7 +2,7 @@
 <h1>Datenschutzbedingungen</h1>
 
 <p><strong>Geltungsbereich</strong><br>
-Diese Datenschutzerklärung klärt Nutzer über die Art, den Umfang und Zwecke der Erhebung und Verwendung personenbezogener Daten durch den verantwortlichen Anbieter Flüchtlingshilfe Erding e.V., Landshuter Straße 70, 85435 Erding (vertreten durch Christina Hundhammer und Sabrina Tarantik), auf dieser Website (im folgenden “Angebot”) auf.
+Diese Datenschutzerklärung klärt Nutzer über die Art, den Umfang und Zwecke der Erhebung und Verwendung personenbezogener Daten durch den verantwortlichen Anbieter Flüchtlingshilfe München, vertreten durch Micky Wenngatz, Oberanger 38/IV, 80331 München, auf dieser Website (im folgenden “Angebot”) auf.
 <br><br>
 Die rechtlichen Grundlagen des Datenschutzes finden sich im Bundesdatenschutzgesetz (BDSG) und dem Telemediengesetz (TMG).
 <br><br>
@@ -22,7 +22,7 @@ Personenbezogene Daten werden von dem Anbieter nur dann erhoben, genutzt und wei
 Es erfolgt keine Weitergabe personenbezogener Daten an Dritte.
 <br><br>
 <strong>Ansprechpartner für Datenschutz</strong><br>
-Bei Fragen zur Erhebung, Verarbeitung oder Nutzung Ihrer personenbezogenen Daten, bei Auskünften, Berichtigung, Sperrung oder Löschung von Daten sowie Widerruf erteilter Einwilligungen wenden Sie sich bitte an: Christina Hundhammer (christina.hundhammer@fluechtlingshilfe-erding.org).
+Bei Fragen zur Erhebung, Verarbeitung oder Nutzung Ihrer personenbezogenen Daten, bei Auskünften, Berichtigung, Sperrung oder Löschung von Daten sowie Widerruf erteilter Einwilligungen wenden Sie sich bitte an: Micky Wenngatz (info@muenchen-ist-bunt.de).
 <br><br>
 <strong>Datensicherheit</strong><br>
 Ihre personenbezogenen Daten werden stets verschlüsselt mittels SSL über das Internet übertragen. Wir sichern unsere Website und sonstigen Systeme durch technische und organisatorische Maßnahmen gegen Verlust, Zerstörung, Zugriff, Veränderung oder Verbreitung Ihrer Daten durch unbefugte Personen. Der Zugang zu Ihrem Kundenkonto ist nur nach Eingabe Ihres persönlichen Passwortes möglich. Sie sollten Ihre Zugangsinformationen stets vertraulich behandeln und das Browserfenster schließen, wenn Sie die Kommunikation mit uns beendet haben, insbesondere wenn Sie den Computer gemeinsam mit anderen nutzen.
