--- a/templates/guest_imprint.html
+++ b/templates/guest_imprint.html
@@ -1,37 +1,15 @@
 <div style="margin: 5px;">
 <h1>Impressum</h1>
 
-<p>Diese Seite wurde erstellt, um die Arbeit der ehrenamtlichen HelferInnen bei der Flüchtlingshilfe in Erding besser zu koordinieren.<br></p>
+<p>Diese Seite wurde erstellt, um die Arbeit der ehrenamtlichen HelferInnen bei der Flüchtlingshilfe in München besser zu koordinieren.<br></p>
 
 <p><strong>Bitte beachten Sie: Wir versuchen zwar, die Informationen stets aktuell zu halten, können aber deren Richtigkeit nicht garantieren.</strong></p>
 <br>
-<p>Flüchtlingshilfe Erding e.V.<br>
-Landshuter Straße 70<br>
-85435 Erding<br><br>
-
-Registergericht und Registernummer folgen in Kürze.<br><br>
-
-Die Flüchtlingshilfe Erding verfolgt keine kommerziellen Ziele und versteht sich als non-profit Organisation.<br><br>
-
-Vertreten durch:<br><br>
-
-Christina Hundhammer<br>
-01737213817<br><br>
-
-Sabrina Tarantik<br>
-01741644136<br>
-<br>
-<strong>Kontakt</strong><br><br>
-Kontakt zu unserem Verein können Sie jederzeit über unsere Vorsitzenden aufnehmen:<br>
-Christina Hundhammer<br>
-+49 (0) 173 - 721 38 17<br>
-christina.hundhammer@fluechtlingshilfe-erding.org<br><br>
-Sabrina Tarantik<br>
-+49 (0) 174 - 1644136<br>
-sabrina.tarantik@fluechtlingshilfe-erding.org<br><br>
-
-Für Presse-Anfragen wenden Sie sich bitte an presse@fluechtlingshilfe-erding.org<br>
-&nbsp;
+<p>VdISP Micky Wenngatz<br>
+Oberanger 38/IV<br>
+80331 München<br>
+info@muenchen-ist-bunt.de<br><br>
+Kontakt: fluechtlingshilfemuc@gmail.com<br>
 </p>
 <p><strong>Abgrenzung:</strong></p>
 <p>Die Web-Präsenz ist Teil des WWW und dementsprechend mit fremden, sich jederzeit wandeln könnenden Web-Sites verknüpft, die folglich auch nicht diesem Verantwortungsbereich unterliegen und für die nachfolgende Informationen nicht gelten. Dass die Links weder gegen Sitten noch Gesetze verstoßen, wurde genau ein mal geprüft: bevor sie hier aufgenommen wurden. Solche Links, die zu fremden Webprojekten führen, erkennen Sie daran: Neues Browserfenster</p>
