--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>%title% - TITLE - Helfersystem</title>
+<title>%title% - Flüchtlingshilfe München - Helfersystem</title>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="css/theme%theme%.css" />
@@ -51,7 +51,7 @@
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1">
           <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="?p=dashboard"><i class="fa fa-heart-o text-danger"></i> <strong class="visible-lg-inline">Flüchtlingshilfe Erding - Helfersystem</strong></a>
+        <a class="navbar-brand" href="?p=dashboard"><i class="fa fa-heart-o text-success"></i> <strong class="visible-lg-inline">Flüchtlingshilfe München - Helfersystem</strong></a>
       </div>
       <div class="collapse navbar-collapse" id="navbar-collapse-1">%menu% %header_toolbar%</div>
     </div>
@@ -64,7 +64,7 @@
         <div class="text-center footer" style="margin-bottom: 10px;">
           <a href="?p=faq2"><i class="fa fa-question-circle"></i> FAQ (Hilfe)</a> · <a href="?p=imprint"><i class="fa fa-info-circle"></i> Impressum</a> · <a href="?p=privacy"><i class="fa fa-shield"></i> Datenschutz
            </a>
-		   <br><small>Further developed by <a href="http://welcomehelp.de" target="_blank">Welcome Help</a>, <a href="https://www.facebook.com/groups/nerds4refugees/" target="_blank">Nerds4Refugees</a> & <a href="LINK" target="_blank">LINKTITLE</a></small>
+		   <br><small>Further developed by <a href="http://welcomehelp.de" target="_blank">Welcome Help</a>, <a href="https://www.facebook.com/groups/nerds4refugees/" target="_blank">Nerds4Refugees</a> & <a href="http://fluechtlingshilfemuenchen.de" target="_blank">Flüchtlingshilfe München</a></small>
         </div>
       </div>
     </div>
